# tuplities

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  measure_compile_times.sh
.github/: copilot-instructions.md
.github/workflows/: rust.yml
tupilities/: Cargo.toml
tupilities-clone/: Cargo.toml
tupilities-clone/src/: lib.rs
tupilities-copy/: Cargo.toml
tupilities-debug/: Cargo.toml
tupilities-default/: Cargo.toml
tupilities-derive/: Cargo.toml
tupilities-derive/src/: lib.rs  tupilities_clone.rs  tupilities_eq.rs  tupilities_mut.rs  tupilities_option.rs  tupilities_partial_eq.rs  tupilities_push_back.rs  tupilities_push_front.rs  tupilities_ref.rs  tuple_size.rs
tupilities-eq/: Cargo.toml
tupilities-eq/src/: lib.rs
tupilities-hash/: Cargo.toml
tupilities-mut/: Cargo.toml
tupilities-mut/src/: lib.rs
tupilities-option/: Cargo.toml
tupilities-option/src/: lib.rs
tupilities-ord/: Cargo.toml
tupilities-partial-eq/: Cargo.toml
tupilities-partial-eq/src/: lib.rs
tupilities-partial-ord/: Cargo.toml
tupilities-push-back/: Cargo.toml
tupilities-push-back/src/: lib.rs
tupilities-push-front/: Cargo.toml
tupilities-push-front/src/: lib.rs
tupilities-ref/: Cargo.toml
tupilities-ref/src/: lib.rs
tupilities/src/: lib.rs
tuplities/: Cargo.toml
tuplities-clone/: Cargo.toml
tuplities-clone/src/: lib.rs
tuplities-copy/: Cargo.toml
tuplities-copy/src/: lib.rs
tuplities-debug/: Cargo.toml
tuplities-debug/src/: lib.rs
tuplities-default/: Cargo.toml
tuplities-default/src/: lib.rs
tuplities-derive/: Cargo.toml
tuplities-derive/src/: lib.rs  tuplities_first_tuple_row.rs  tuplities_flatten_nested_tuple.rs  tuplities_from.rs  tuplities_hash.rs  tuplities_index.rs  tuplities_last_tuple_row.rs  tuplities_len.rs  tuplities_mut_map.rs  tuplities_nest_tuple.rs  tuplities_nested_tuple_index.rs  tuplities_pop_back.rs  tuplities_pop_front.rs  tuplities_ref_map.rs  tuplities_replicate.rs  tuplities_reverse.rs  tuplities_row.rs  tuplities_row_mut.rs  tuplities_split.rs  tuplities_try_from.rs
tuplities-eq/: Cargo.toml
tuplities-eq/src/: lib.rs
tuplities-flatten-nest/: Cargo.toml
tuplities-flatten-nest/src/: flatten_nested.rs  lib.rs  matrix.rs  nest.rs  nested_chain.rs  nested_index.rs  nested_into_vec.rs  nested_option.rs  nested_option_try_from.rs  nested_push_pop.rs  nested_ref.rs  nested_replicate.rs  nested_row.rs  nested_starts_with.rs  nested_try_from.rs
tuplities-from/: Cargo.toml
tuplities-from/src/: lib.rs
tuplities-hash/: Cargo.toml
tuplities-hash/src/: lib.rs
tuplities-index/: Cargo.toml
tuplities-index/src/: lib.rs
tuplities-insert/: Cargo.toml
tuplities-insert/src/: lib.rs
tuplities-len/: Cargo.toml
tuplities-len/src/: lib.rs
tuplities-mut/: Cargo.toml
tuplities-mut/src/: lib.rs
tuplities-option/: Cargo.toml
tuplities-option/src/: lib.rs
tuplities-ord/: Cargo.toml
tuplities-ord/src/: lib.rs
tuplities-partial-eq/: Cargo.toml
tuplities-partial-eq/src/: lib.rs
tuplities-partial-ord/: Cargo.toml
tuplities-partial-ord/src/: lib.rs
tuplities-pop/: Cargo.toml
tuplities-pop-back/: Cargo.toml
tuplities-pop-back/src/: lib.rs
tuplities-pop-front/: Cargo.toml
tuplities-pop-front/src/: lib.rs
tuplities-pop/src/: lib.rs
tuplities-push-back/: Cargo.toml
tuplities-push-back/src/: lib.rs
tuplities-push-front/: Cargo.toml
tuplities-push-front/src/: lib.rs
tuplities-ref/: Cargo.toml
tuplities-ref/src/: lib.rs
tuplities-remove/: Cargo.toml
tuplities-remove/src/: lib.rs
tuplities-replicate/: Cargo.toml
tuplities-replicate/src/: lib.rs
tuplities-reverse/: Cargo.toml
tuplities-reverse/src/: lib.rs
tuplities-row/: Cargo.toml
tuplities-row/src/: lib.rs
tuplities-split/: Cargo.toml
tuplities-split/src/: lib.rs
tuplities-try-from/: Cargo.toml
tuplities-try-from/src/: lib.rs
tuplities/src/: lib.rs
