[workspace]
resolver = "2"

members = [
  "tuplities",
  "tuplities-clone",
  "tuplities-copy",
  "tuplities-debug",
  "tuplities-default",
  "tuplities-eq",
  "tuplities-from",
  "tuplities-hash",
  "tuplities-index",
  "tuplities-insert",
  "tuplities-len",
  "tuplities-mut",
  "tuplities-option",
  "tuplities-ord",
  "tuplities-partial-eq",
  "tuplities-partial-ord",
  "tuplities-pop-back",
  "tuplities-pop-front",
  "tuplities-push-back",
  "tuplities-push-front",
  "tuplities-ref",
  "tuplities-remove",
  "tuplities-replicate",
  "tuplities-reverse",
  "tuplities-split",
  "tuplities-try-from",
  "tuplities-derive",
]

[workspace.package]
authors = ["Luca Cappelletti"]
edition = "2024"
description = "A collection of utilities for working with tuples in Rust."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/lucacappelletti94/tuplities"
homepage = "https://github.com/lucacappelletti94/tuplities"
keywords = ["tuples", "utilities", "metaprogramming", "typenum"]
categories = ["development-tools", "data-structures"]
version = "0.1.3"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
tuplities-clone = { path = "tuplities-clone", version = "0.1.3" }
tuplities-copy = { path = "tuplities-copy", version = "0.1.3" }
tuplities-debug = { path = "tuplities-debug", version = "0.1.3" }
tuplities-default = { path = "tuplities-default", version = "0.1.3" }
tuplities-eq = { path = "tuplities-eq", version = "0.1.3" }
tuplities-from = { path = "tuplities-from", version = "0.1.3" }
tuplities-hash = { path = "tuplities-hash", version = "0.1.3" }
tuplities-index = { path = "tuplities-index", version = "0.1.3" }
tuplities-insert = { path = "tuplities-insert", version = "0.1.3" }
tuplities-len = { path = "tuplities-len", version = "0.1.3" }
tuplities-mut = { path = "tuplities-mut", version = "0.1.3" }
tuplities-option = { path = "tuplities-option", version = "0.1.3" }
tuplities-ord = { path = "tuplities-ord", version = "0.1.3" }
tuplities-partial-eq = { path = "tuplities-partial-eq", version = "0.1.3" }
tuplities-partial-ord = { path = "tuplities-partial-ord", version = "0.1.3" }
tuplities-pop-back = { path = "tuplities-pop-back", version = "0.1.3" }
tuplities-pop-front = { path = "tuplities-pop-front", version = "0.1.3" }
tuplities-push-back = { path = "tuplities-push-back", version = "0.1.3" }
tuplities-push-front = { path = "tuplities-push-front", version = "0.1.3" }
tuplities-ref = { path = "tuplities-ref", version = "0.1.3" }
tuplities-remove = { path = "tuplities-remove", version = "0.1.3" }
tuplities-replicate = { path = "tuplities-replicate", version = "0.1.3" }
tuplities-reverse = { path = "tuplities-reverse", version = "0.1.3" }
tuplities-split = { path = "tuplities-split", version = "0.1.3" }
tuplities-try-from = { path = "tuplities-try-from", version = "0.1.3" }
tuplities-derive = { path = "tuplities-derive", version = "0.1.3" }
typenum = { version = "1" }

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
unnecessary_cast = "forbid"
unused_unit = "allow"
redundant_clone = "forbid"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
