[package]
name = "tupilities"
version = "0.1.0"
edition = "2024"

[dependencies]
tupilities-as-ref.workspace = true
tupilities-clone.workspace = true
tupilities-copy.workspace = true
tupilities-debug.workspace = true
tupilities-default.workspace = true
tupilities-eq.workspace = true
tupilities-hash.workspace = true
tupilities-partial-eq.workspace = true

[lints]
workspace = true

[features]
default = []
size-16 = ["tupilities-as-ref/size-16", "tupilities-clone/size-16", "tupilities-copy/size-16", "tupilities-debug/size-16", "tupilities-default/size-16", "tupilities-eq/size-16", "tupilities-hash/size-16", "tupilities-partial-eq/size-16"]
size-32 = ["tupilities-as-ref/size-32", "tupilities-clone/size-32", "tupilities-copy/size-32", "tupilities-debug/size-32", "tupilities-default/size-32", "tupilities-eq/size-32", "tupilities-hash/size-32", "tupilities-partial-eq/size-32"]
size-48 = ["tupilities-as-ref/size-48", "tupilities-clone/size-48", "tupilities-copy/size-48", "tupilities-debug/size-48", "tupilities-default/size-48", "tupilities-eq/size-48", "tupilities-hash/size-48", "tupilities-partial-eq/size-48"]
size-64 = ["tupilities-as-ref/size-64", "tupilities-clone/size-64", "tupilities-copy/size-64", "tupilities-debug/size-64", "tupilities-default/size-64", "tupilities-eq/size-64", "tupilities-hash/size-64", "tupilities-partial-eq/size-64"]
size-96 = ["tupilities-as-ref/size-96", "tupilities-clone/size-96", "tupilities-copy/size-96", "tupilities-debug/size-96", "tupilities-default/size-96", "tupilities-eq/size-96", "tupilities-hash/size-96", "tupilities-partial-eq/size-96"]
size-128 = ["tupilities-as-ref/size-128", "tupilities-clone/size-128", "tupilities-copy/size-128", "tupilities-debug/size-128", "tupilities-default/size-128", "tupilities-eq/size-128", "tupilities-hash/size-128", "tupilities-partial-eq/size-128"]
