[package]
name = "tuplities-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
siphasher = "1.0"
typenum = { workspace = true }

[features]
default = []
size-16 = []
size-32 = []
size-48 = []
size-64 = []
size-96 = []
size-128 = []

[lints]
workspace = true
