[package]
name = "tuplities-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for deriving tuple traits"
readme.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
siphasher = "1.0"
typenum = { workspace = true }

[features]
default = []
size-16 = []
size-32 = []
size-48 = []
size-64 = []
size-96 = []
size-128 = []

[lints]
workspace = true
