[package]
name = "tuplities-len"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true


[dependencies]
typenum = { workspace = true }
tuplities-derive = { workspace = true }

[features]
default = []
size-16 = ["tuplities-derive/size-16"]
size-32 = ["tuplities-derive/size-32"]
size-48 = ["tuplities-derive/size-48"]
size-64 = ["tuplities-derive/size-64"]
size-96 = ["tuplities-derive/size-96"]
size-128 = ["tuplities-derive/size-128"]

[lints]
workspace = true
