[package]
name = "tuplities-option"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
tuplities-derive.workspace = true
tuplities-default.workspace = true

[lints]
workspace = true

[features]
default = []
size-16 = ["tuplities-derive/size-16", "tuplities-default/size-16"]
size-32 = ["tuplities-derive/size-32", "tuplities-default/size-32"]
size-48 = ["tuplities-derive/size-48", "tuplities-default/size-48"]
size-64 = ["tuplities-derive/size-64", "tuplities-default/size-64"]
size-96 = ["tuplities-derive/size-96", "tuplities-default/size-96"]
size-128 = ["tuplities-derive/size-128", "tuplities-default/size-128"]
