[package]
name = "tuplities-ord"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true


[dependencies]
tuplities-derive.workspace = true
tuplities-eq.workspace = true
tuplities-partial-ord.workspace = true

[lints]
workspace = true

[features]
default = []
size-16 = ["tuplities-derive/size-16", "tuplities-eq/size-16", "tuplities-partial-ord/size-16"]
size-32 = ["tuplities-derive/size-32", "tuplities-eq/size-32", "tuplities-partial-ord/size-32"]
size-48 = ["tuplities-derive/size-48", "tuplities-eq/size-48", "tuplities-partial-ord/size-48"]
size-64 = ["tuplities-derive/size-64", "tuplities-eq/size-64", "tuplities-partial-ord/size-64"]
size-96 = ["tuplities-derive/size-96", "tuplities-eq/size-96", "tuplities-partial-ord/size-96"]
size-128 = ["tuplities-derive/size-128", "tuplities-eq/size-128", "tuplities-partial-ord/size-128"]
