[package]
name = "tuplities-try-from"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Traits for fallible conversion of values into tuples"
readme.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
tuplities-derive.workspace = true

[lints]
workspace = true

[features]
default = []
size-16 = ["tuplities-derive/size-16"]
size-32 = ["tuplities-derive/size-32"]
size-48 = ["tuplities-derive/size-48"]
size-64 = ["tuplities-derive/size-64"]
size-96 = ["tuplities-derive/size-96"]
size-128 = ["tuplities-derive/size-128"]
