[package]
name = "tuplities"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true


[dependencies]
tuplities-clone.workspace = true
tuplities-copy.workspace = true
tuplities-debug.workspace = true
tuplities-default.workspace = true
tuplities-eq.workspace = true
tuplities-flatten-nest.workspace = true
tuplities-from.workspace = true
tuplities-hash.workspace = true
tuplities-mut.workspace = true
tuplities-option.workspace = true
tuplities-ord.workspace = true
tuplities-partial-eq.workspace = true
tuplities-partial-ord.workspace = true
tuplities-remove.workspace = true
tuplities-insert.workspace = true
tuplities-len.workspace = true
tuplities-index.workspace = true
tuplities-pop-front.workspace = true
tuplities-pop-back.workspace = true
tuplities-push-front.workspace = true
tuplities-push-back.workspace = true
tuplities-ref.workspace = true
tuplities-replicate.workspace = true
tuplities-reverse.workspace = true
tuplities-row.workspace = true
tuplities-split.workspace = true
tuplities-try-from.workspace = true

[lints]
workspace = true

[features]
default = []
size-16 = [
  "tuplities-clone/size-16",
  "tuplities-copy/size-16",
  "tuplities-debug/size-16",
  "tuplities-default/size-16",
  "tuplities-eq/size-16",
  "tuplities-from/size-16",
  "tuplities-hash/size-16",
  "tuplities-option/size-16",
  "tuplities-ord/size-16",
  "tuplities-partial-eq/size-16",
  "tuplities-partial-ord/size-16",
  "tuplities-mut/size-16",
  "tuplities-remove/size-16",
  "tuplities-insert/size-16",
  "tuplities-len/size-16",
  "tuplities-index/size-16",
  "tuplities-ref/size-16",
  "tuplities-replicate/size-16",
  "tuplities-pop-front/size-16",
  "tuplities-pop-back/size-16",
  "tuplities-push-front/size-16",
  "tuplities-push-back/size-16",
  "tuplities-reverse/size-16",
  "tuplities-split/size-16",
  "tuplities-try-from/size-16",
]
size-32 = [
  "tuplities-clone/size-32",
  "tuplities-copy/size-32",
  "tuplities-debug/size-32",
  "tuplities-default/size-32",
  "tuplities-eq/size-32",
  "tuplities-from/size-32",
  "tuplities-hash/size-32",
  "tuplities-option/size-32",
  "tuplities-ord/size-32",
  "tuplities-partial-eq/size-32",
  "tuplities-partial-ord/size-32",
  "tuplities-mut/size-32",
  "tuplities-remove/size-32",
  "tuplities-insert/size-32",
  "tuplities-len/size-32",
  "tuplities-index/size-32",
  "tuplities-ref/size-32",
  "tuplities-replicate/size-32",
  "tuplities-pop-front/size-32",
  "tuplities-pop-back/size-32",
  "tuplities-push-front/size-32",
  "tuplities-push-back/size-32",
  "tuplities-reverse/size-32",
  "tuplities-split/size-32",
  "tuplities-try-from/size-32",
]
size-48 = [
  "tuplities-clone/size-48",
  "tuplities-copy/size-48",
  "tuplities-debug/size-48",
  "tuplities-default/size-48",
  "tuplities-eq/size-48",
  "tuplities-from/size-48",
  "tuplities-hash/size-48",
  "tuplities-option/size-48",
  "tuplities-ord/size-48",
  "tuplities-partial-eq/size-48",
  "tuplities-partial-ord/size-48",
  "tuplities-mut/size-48",
  "tuplities-remove/size-48",
  "tuplities-insert/size-48",
  "tuplities-len/size-48",
  "tuplities-index/size-48",
  "tuplities-ref/size-48",
  "tuplities-replicate/size-48",
  "tuplities-pop-front/size-48",
  "tuplities-pop-back/size-48",
  "tuplities-push-front/size-48",
  "tuplities-push-back/size-48",
  "tuplities-reverse/size-48",
  "tuplities-split/size-48",
  "tuplities-try-from/size-48",
]
size-64 = [
  "tuplities-clone/size-64",
  "tuplities-copy/size-64",
  "tuplities-debug/size-64",
  "tuplities-default/size-64",
  "tuplities-eq/size-64",
  "tuplities-from/size-64",
  "tuplities-hash/size-64",
  "tuplities-option/size-64",
  "tuplities-ord/size-64",
  "tuplities-partial-eq/size-64",
  "tuplities-partial-ord/size-64",
  "tuplities-mut/size-64",
  "tuplities-remove/size-64",
  "tuplities-insert/size-64",
  "tuplities-len/size-64",
  "tuplities-index/size-64",
  "tuplities-ref/size-64",
  "tuplities-replicate/size-64",
  "tuplities-pop-front/size-64",
  "tuplities-pop-back/size-64",
  "tuplities-push-front/size-64",
  "tuplities-push-back/size-64",
  "tuplities-reverse/size-64",
  "tuplities-split/size-64",
  "tuplities-try-from/size-64",
]
size-96 = [
  "tuplities-clone/size-96",
  "tuplities-copy/size-96",
  "tuplities-debug/size-96",
  "tuplities-default/size-96",
  "tuplities-eq/size-96",
  "tuplities-from/size-96",
  "tuplities-hash/size-96",
  "tuplities-option/size-96",
  "tuplities-ord/size-96",
  "tuplities-partial-eq/size-96",
  "tuplities-partial-ord/size-96",
  "tuplities-mut/size-96",
  "tuplities-remove/size-96",
  "tuplities-insert/size-96",
  "tuplities-len/size-96",
  "tuplities-index/size-96",
  "tuplities-ref/size-96",
  "tuplities-replicate/size-96",
  "tuplities-pop-front/size-96",
  "tuplities-pop-back/size-96",
  "tuplities-push-front/size-96",
  "tuplities-push-back/size-96",
  "tuplities-reverse/size-96",
  "tuplities-split/size-96",
  "tuplities-try-from/size-96",
]
size-128 = [
  "tuplities-clone/size-128",
  "tuplities-copy/size-128",
  "tuplities-debug/size-128",
  "tuplities-default/size-128",
  "tuplities-eq/size-128",
  "tuplities-from/size-128",
  "tuplities-hash/size-128",
  "tuplities-option/size-128",
  "tuplities-ord/size-128",
  "tuplities-partial-eq/size-128",
  "tuplities-partial-ord/size-128",
  "tuplities-mut/size-128",
  "tuplities-remove/size-128",
  "tuplities-insert/size-128",
  "tuplities-len/size-128",
  "tuplities-index/size-128",
  "tuplities-ref/size-128",
  "tuplities-replicate/size-128",
  "tuplities-pop-front/size-128",
  "tuplities-pop-back/size-128",
  "tuplities-push-front/size-128",
  "tuplities-push-back/size-128",
  "tuplities-reverse/size-128",
  "tuplities-split/size-128",
  "tuplities-try-from/size-128",
]
